# semantic-cache-gateway

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.sh  docker-compose.yml
src/: constants.rs  dto.rs  embedding.rs  error.rs  llm.rs  main.rs  metrics.rs  routes.rs  state.rs
