[package]
name = "semantic_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
qdrant-client = "1.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokenizers = "0.19"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.2", features = ["v4"] }
